# naics-editor

./: .gitignore  README.md  main.py  naics.duckdb  naics_data.db  naics_descriptions.parquet  naics_descriptions_final.parquet  preprocess_data.py  pyproject.toml  requirements.txt  to_parquet.py
static/: index.html
